--- a/main.tex
+++ b/main.tex
@@ -22,7 +22,7 @@
 
 % hyperref was loaded automatically in hepthesis.cls but the metdata stuff wasn't working (think hyperref) was being loaded at the "wrong" time
 % commented it out there and manually loaded it here - I think hyperref should be loaded at the end but it works fine here so going with it
-%\usepackage{hyperref}
+\usepackage{hyperref}
 %% Doc-specific PDF metadata
 \makeatletter
 \@ifpackageloaded{hyperref}{%
