--- a/main.tex
+++ b/main.tex
@@ -64,27 +64,27 @@
 
 %% Define the un-numbered front matter (cover pages, rubrik and table of contents)
 \begin{frontmatter}
-  \input{liverpool_title_page}
-  \input{frontmatter}
+  %\input{liverpool_title_page}
+  %\input{frontmatter}
 \end{frontmatter}
 
 %% Start the content body of the thesis
 \begin{mainmatter}
   %% Actually, more semantic chapter filenames are better, like "chap-bgtheory.tex"
-  \input{chap1-introduction}
-  \input{chap2-motivation_for_steriles}
-  \input{chap3-SBN_Program}
-  \input{chap4-Energy_Reco}
-  \input{chap5-oscillation_inputs}
+  %\input{chap1-introduction}
+  %\input{chap2-motivation_for_steriles}
+  %\input{chap3-SBN_Program}
+  %\input{chap4-Energy_Reco}
+  %\input{chap5-oscillation_inputs}
   \input{chap6-valor_analysis_2}
-  \input{chap7-conclusion}
+  %\input{chap7-conclusion}
   %% To ignore a specific chapter while working on another, making the build faster, comment it out:
   %\input{chap4}
 \end{mainmatter}
 
 %% Produce the appendices
 \begin{appendices}
-  \input{appendices}
+  %\input{appendices}
 \end{appendices}
 
 %% Produce the un-numbered back matter (e.g. colophon,
